# Biomedical_Robotics_project

./: .gitignore  CMakeLists.txt  ForwardKinematics.cpp  IK_Solver.cpp  InverseKinematics.cpp  test.xyz
NeuroKinematics/: NeuroKinematics.cpp  NeuroKinematics.hpp
